recovered from  ng cli deletion

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-venv=unfEnv
-source ~/unf/unfEnv/bin/activate
+venv=venv
+source ~/Desktop/mitzvah_scheduler/venv/bin/activate
 currentvenv=""
 
 if [ "$(pwd)" == "Users/Zach/Desktop/mitzvah_scheduler" ]; then
