--- a/mitzvah/package.json
+++ b/mitzvah/package.json
@@ -22,12 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
-    "tether": "^1.4.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
