--- a/mitzvah/package.json
+++ b/mitzvah/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "hebcal": "^2.2.6",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
