--- a/mitzvah/package.json
+++ b/mitzvah/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hebcal": "^2.2.6",
+    "jquery": "^3.3.1",
     "npm": "^5.7.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
