--- a/mitzvah/package.json
+++ b/mitzvah/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --watch",
-    "nearprod":"ng build --build-optimizer true --aot true --extract-css true --named-chunks false --sourcemaps false --output-hashing all",
+    "nearprod": "ng build --build-optimizer true --aot true --extract-css true --named-chunks false --sourcemaps false --output-hashing all",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -30,6 +30,7 @@
     "jquery": "^3.3.1",
     "npm": "^5.7.1",
     "rxjs": "^5.5.6",
+    "uglify-es": "3.2.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
