--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ fi
 
 export DATABASE_URL="postgresql://localhost/mitzvah_dev"
 export APP_SETTINGS="config.DevelopmentConfig"
+export ADMIN_CODE="ldor_vdor"
