--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ fi
 export DATABASE_URL="postgresql://localhost/mitzvah_dev"
 export APP_SETTINGS="config.DevelopmentConfig"
 export ADMIN_CODE="ldor_vdor"
+export REDISTOGO_URL="redis://localhost:6380"
+export EMAIL="mitzvahscheduler@gmail.com"
+export EMAIL_PASSWORD="Masterp123"
