--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ MarkupSafe==1.0
 psycopg2==2.7.4
 python-dateutil==2.6.1
 python-editor==1.0.3
+redis==2.10.6
+rq==0.10.0
 six==1.11.0
 SQLAlchemy==1.2.5
 Werkzeug==0.14.1
