--- a/.env
+++ b/.env
@@ -19,3 +19,5 @@ export ADMIN_CODE="ldor_vdor"
 export REDISTOGO_URL="redis://localhost:6380"
 export EMAIL="mitzvahscheduler@gmail.com"
 export EMAIL_PASSWORD="Masterp123"
+export isLocal=yes
+export SERVER_NAME=localhost:5000
