--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,27 @@ rq==0.10.0
 six==1.11.0
 SQLAlchemy==1.2.5
 Werkzeug==0.14.1
+alembic==0.9.8
+click==6.7
+convertdate==2.1.2
+ephem==3.7.6.0
+Flask==0.12.2
+Flask-Migrate==2.1.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+gunicorn==19.7.1
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+psycopg2==2.7.4
+PuLP==1.6.8
+pyparsing==2.2.0
+python-dateutil==2.6.1
+python-editor==1.0.3
+pytz==2017.3
+redis==2.10.6
+rq==0.10.0
+six==1.11.0
+SQLAlchemy==1.2.5
+Werkzeug==0.14.1
